# crawl-analysis

./: Dockerfile  README.md  pyproject.toml
src/crawl_analysis/: 0_👋_Welcome.py  __init__.py  app.py  cli.py
src/crawl_analysis/models/: database.py  post.py
src/crawl_analysis/modules/: facebook.py  keyword_extractor.py  line.py  sentiment.py
src/crawl_analysis/pages/: 1_Crawlers_Facebook.py  1_🐜_Crawlers_Facebook.py  2_🐜_Crawlers_LINE.py  3_🧹_Normalize_Facebook.py  4_Sentiment_Analysis_Chat.py  4_🧹_Normalize_LINE.py  5_Split_Words_Basic.py  5_🔍_Sentiment_Analysis_Basic.py  6_WordCloud.py  7_☁_Split_Words_Basic.py  Facebook.py  LINE.py  Sentiment_Analysis_Basic.py  Sentiment_Analysis_Chat.py  Split_Words_Basic.py
src/crawl_analysis/pages/Crawlers/: LINE.py
src/crawl_analysis/pages/Sentiment_Analysis/: Sentiment_Analysis_Basic.py
src/crawl_analysis/pages/TextCloud/: TextCloud.py
