[project]
name = "crawl-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pan93412", email = "pan93412@gmail.com" }
]
dependencies = [
    "transformers>=4.36.2",
    "torch>=2.1.2",
    "streamlit>=1.29.0",
    "ckip-transformers>=0.3.4",
    "wordcloud>=1.9.3",
    "matplotlib>=3.7.4",
    "selenium>=4.16.0",
    "webdriver_manager>=4.0.1",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pymongo>=4.6.1",
    "opencv-python>=4.9.0.80",
    "streamlit-mermaid>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
